--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
     implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.github.stefanbirkner:system-lambda:1.2.0'
